# Wallpaper

./: ChangeLog  Makefile.am  Makefile.in  NEWS  README  configure  configure.ac
autom4te.cache/: output.1  requests  traces.0  traces.1
doc/: Makefile.in  OVERVIEW
man/: Makefile.am  Makefile.in  Wallpaper.8
src/: Makefile.am  Makefile.in  config.h  fonctions.c  fonctions.h  main.c  window.c  window.h
