#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT(Wallpaper, 0.1a, theclyds@gmail.com)

AM_INIT_AUTOMAKE

# Checks for programs.
AC_PROG_CC

AC_PROG_MAKE_SET

AC_CONFIG_FILES([Makefile
                 doc/Makefile
                 man/Makefile
                 src/Makefile])
AC_OUTPUT
